<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL_Math" Id="{075a91d5-10d5-4158-8c0a-c855859db804}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	LREAL_MIN			: LREAL := -1E-44;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>